<resources>
    <string name="app_name">Paynet One</string>
    <string name="default_notification_channel_id">Paynet One</string>
    <string name="error_system_upgrading">Hệ thống đang nâng cấp. Vui lòng quay lại sau!</string>
    <string name="error_fail_default">Hệ thống đang bận. Vui lòng thử lại sau!</string>
    <string name="error_empty_phone">Vui lòng nhập số điện thoại</string>
    <string name="error_password_empty">Vui lòng nhập mật khẩu</string>
    <string name="error_empty_otp">Vui lòng nhập mã xác nhận</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="error_warning_phone">Số điện thoại không hợp lệ</string>
    <string name="home_qr_online">Thanh toán \nQR động</string>
    <string name="home_history">Lịch sử</string>
    <string name="tab_title">Tab title</string>
    <string name="cam_use_capture">Sử dụng</string>
    <string name="cam_retry_capture">Thử lại</string>
    <string name="permission_rationale_message">You have rejected us to apply for authorization, please agree to authorization, otherwise the function can\'t be used normally!</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
    <string name="xac_thuc_otp">Mã xác nhận được gửi đến số điện thoại </string>
    <string name="str_confirm">Xác nhận</string>
    <string name="str_allow_account_personal_and_stall_login">Chỉ tài khoản cá nhân và tài khoản quầy mới được đăng nhập vào app</string>
    <string name="hint_username">Số điện thoại</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="str_register"><font fgcolor='#007fff'>Bạn chưa có tài khoản? <u>Đăng ký</u></font></string>
    <string name="message_field_password_invalid">Mật khẩu tối thiểu 6 ký tự</string>
    <string name="str_title_tab_qr">Thanh Toán Qr</string>
    <string name="str_title_tab_service">Dịch vụ gia tăng</string>
    <string name="str_offers_promotions">Ưu đãi &amp; khuyến mại</string>
    <string name="str_title_qr_dynamic">Tạo mã QR Code thanh toán</string>
    <string name="str_viettel_money">Viettel\n money</string>
    <string name="str_zalo_pay">ZaloPay</string>
    <string name="str_shoppe_pay">Shoppe\nPay</string>
    <string name="str_vn_pay">VNPay</string>
    <string name="str_moca">Grab Pay</string>
    <string name="str_viet_qr">VietQR</string>
    <string name="str_error_amount">Số tiền tối thiểu là 10.000đ</string>
    <string name="str_qr_viettel">Sử dụng ứng dụng Viettel money để quét mã</string>
    <string name="str_qr_zalo">Sử dụng ứng dụng ZaloPay để quét mã</string>
    <string name="str_qr_shopee">Sử dụng ứng dụng ShopeePay để quét mã</string>
    <string name="str_qr_vn_pay">Sử dụng ứng dụng VNPay để quét mã</string>
    <string name="str_qr_moca">Sử dụng ứng dụng Moca để quét mã</string>
    <string name="str_qr_viet_qr">Sử dụng ứng dụng VietQR để quét mã</string>
    <string name="str_code_order">Mã đơn hàng:  </string>
    <string name="str_title_fragment_merchant">Hồ sơ Merchant</string>
    <string name="st_profile_status">Trạng thái hồ sơ</string>
    <string name="str_service">Dịch vụ</string>
    <string name="str_qr_code">QR Code</string>
    <string name="str_business_registration_information">Thông tin đăng ký kinh doanh</string>
    <string name="str_phone_number">Số điện thoại</string>
    <string name="str_tax_code_required">Mã số thuế <font fgcolor='#EA5151'>*</font></string>
    <string name="str_tax_code">Mã số thuế </string>
    <string name="str_fax">Fax</string>
    <string name="str_hint_fax">Nhập số fax</string>
    <string name="str_business_registration_number">Mã số đăng ký hộ kinh doanh</string>
    <string name="str_hint_business_registration_number">Nhập mã số đăng ký hộ kinh doanh</string>
    <string name="str_company_name">Tên công ty <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_company_name">Nhập tên công ty</string>
    <string name="st_name_qr">Tên in trên QR <font fgcolor='#EA5151'>*</font></string>
    <string name="st_hint_name_qr">Nhập tên in trên QR</string>
    <string name="str_hint_tax_code">Nhập mã số thuế</string>
    <string name="str_select_service_type">Chọn Loại dịch vụ hàng hóa</string>
    <string name="str_province_city">Chọn Tỉnh/Thành phố</string>
    <string name="str_district">Chọn Quận/Huyện</string>
    <string name="str_wards">Chọn Xã/Phường</string>
    <string name="st_full_name">Họ tên</string>
    <string name="str_number_gttt">Nhập số giấy tờ tùy thân</string>
    <string name="str_photo_font">Ảnh CMND/CCCD/ Hộ chiếu mặt trước <font fgcolor='#EA5151'>*</font></string>
    <string name="str_photo_backside">Ảnh CMND/CCCD/ Hộ chiếu mặt sau <font fgcolor='#EA5151'>*</font></string>
    <string name="str_app">Hình chụp app </string>
    <string name="str_billing_information">Thông tin thanh toán</string>
    <string name="str_account_number">Số tài khoản</string>
    <string name="str_select_bank">Chọn ngân hàng</string>
    <string name="str_branch_bank">Chi nhánh</string>
    <string name="str_update">Cập nhật</string>
    <string name="str_formality_type">Hình thức kinh doanh</string>
    <string name="str_formality_offline">Kinh doanh Offline</string>
    <string name="str_formality_online">Kinh doanh Online</string>
    <string name="str_name_business_service">Hàng hóa kinh doanh <font fgcolor='#EA5151'>*</font></string>
    <string name="str_name_province">Tỉnh/Thành phố <font fgcolor='#EA5151'>*</font></string>
    <string name="str_name_district">Quận/huyện <font fgcolor='#EA5151'>*</font></string>
    <string name="str_name_ward">Xã/phường <font fgcolor='#EA5151'>*</font></string>
    <string name="str_name_address">Địa chỉ <font fgcolor='#EA5151'>*</font></string>
    <string name="str_number_cttt_requied">Số GTTT <font fgcolor='#EA5151'>*</font></string>
    <string name="str_name_personal_bank_required">Tên chủ tài khoản <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_personal_bank">Nhập tên chủ tài khoản</string>
    <string name="str_bank_required">Ngân hàng <font fgcolor='#EA5151'>*</font></string>
    <string name="str_business_registration_required">Chứng nhận đăng ký kinh doanh / hộ kinh doanh <font fgcolor='#EA5151'>*</font></string>
    <string name="str_business_registration">Chứng nhận đăng ký kinh doanh / hộ kinh doanh </string>
    <string name="str_address_sale_required">Hình chụp điểm bán hàng <b><font fgcolor='#EA5151'>*</font></b></string>
    <string name="str_address_sale">Hình chụp điểm bán hàng</string>
    <string name="str_image_tax_code_required">Ảnh mã số thuế <font fgcolor='#EA5151'>*</font></string>
    <string name="str_image_tax_code">Ảnh mã số thuế</string>
    <string name="str_other">Các chứng từ khác (nếu có)</string>
    <string name="str_service_qr">Thanh toán QR</string>
    <string name="str_service_tra_sau">Mua ngay - trả sau</string>
    <string name="str_name_service">Dịch vụ <font fgcolor='#EA5151'>*</font></string>
    <string name="str_name_qr_option">Dịch vụ yêu cầu cung cấp<font fgcolor='#EA5151'>*</font></string>
    <string name="str_qr_code_dong">QR code động</string>
    <string name="str_qr_code_tinh">QR code tĩnh</string>
    <string name="str_business_type">Loại hình kinh doanh</string>
    <string name="str_business_enterprise">Doanh nghiệp</string>
    <string name="str_business_household">Hộ kinh doanh</string>
    <string name="str_business_personal">Cá nhân kinh doanh</string>
    <string name="str_business_vietlott">Cửa hàng xổ số Vietlott</string>
    <string name="str_business_synthetic">Cửa hàng xổ số tổng hợp</string>
    <string name="str_waiting_approval">Chờ phê duyệt</string>
    <string name="str_add_profile">Bổ sung hồ sơ</string>
    <string name="str_approved">Đã phê duyệt</string>
    <string name="str_refuse">Từ chối</string>
    <string name="str_representative_information">Thông tin người đại diện</string>
    <string name="str_detailed_address">Địa chỉ chi tiết</string>
    <string name="str_business_information">Thông tin kinh doanh</string>
    <string name="str_confirm_mobile_number">Vui lòng nhập chính xác số điện thoại đã đăng ký tài khoản kinh doanh. <b>\nMã xác thực sẽ được gửi để xác minh tài khoản</b></string>
    <string name="str_send_request">Xác nhận</string>
    <string name="str_account_already"><font fgcolor='#373636'>Bạn đã có tài khoản?</font> <font fgcolor='#007fff'>Đăng nhập</font></string>
    <string name="sr_fragment_request_otp_title">Quên mật khẩu</string>
    <string name="str_forgot_your_password"><u>Quên mật khẩu</u></string>
    <string name="str_did_not_phone_number">Bạn chưa nhập Số điện thoại</string>
    <string name="str_fragment_forgot_password_title">Quên mật khẩu</string>
    <string name="str_new_password">Nhập mật khẩu mới</string>
    <string name="str_confirm_password">Xác nhận mật khẩu</string>
    <string name="str_opt_zalo_fragment_forgot_password">Bạn không nhận được mã OTP? </string>
    <string name="str_enter_phone_number">Nhập số điện thoại</string>
    <string name="str_enter_otp">Nhập mã OTP</string>
    <string name="str_not_enter_phone_number">Bạn chưa nhập Số điện thoại</string>
    <string name="str_not_enter_password">Bạn chưa nhập Mật khẩu</string>
    <string name="str_not_enter_confirm_password">Bạn chưa nhập lại mật khẩu</string>
    <string name="str_not_match_password">Mật khẩu không khớp</string>
    <string name="str_not_enter_otp">Bạn chưa nhập OTP</string>
    <string name="str_change_password_success">Thay đổi mật khẩu thành công</string>
    <string name="str_name_confirm_password">Xác nhận mật khẩu <font fgcolor='#EA5151'>*</font></string>
    <string name="str_note_forgot_password">Lưu ý: Độ dài mật khẩu yêu cầu từ 6-50 ký tự, bao gồm ít nhất một ký tự viết thường, một ký tự chữ số, một ký tự đặc biệt và một ký tự viết hoa</string>
    <string name="str_message_field_password_invalid">Mật khẩu có độ dài tối thiểu 6 ký tự và tối đa 50 ký tự</string>
    <string name="str_message_field_password_not_strong">Mật khẩu gồm ít nhất một ký tự viết thường, một ký tự chữ số,một ký tự đặc biệt và một ký tự hoa</string>
    <string name="str_completed">Hoàn tất</string>
    <string name="str_completed_change_password">Hoàn tất đổi mật khẩu</string>
    <string name="str_message_change_password_success">Chúc mừng bạn đã đổi mật khẩu tài khoản Merchant Paynet One thành công</string>
    <string name="str_title_dialog_contact">CÔNG TY CỔ PHẦN MẠNG THANH TOÁN PAYNET VIỆT NAM</string>
    <string name="str_email_contact">info@paynetvn.com</string>
    <string name="str_phone_contact">+84 93 173 98 89</string>
    <string name="str_facebook_contact">https://www.facebook.com/paynetvnn/</string>
    <string name="str_done">Xong</string>
    <string name="str_name_merchant">Tên merchant <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_name_merchant">Nhập tên merchant</string>
    <string name="str_name_email">Email <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_name_email">Nhập email</string>
    <string name="str_name_password">Mật khẩu <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_name_password">Nhập mật khẩu</string>
    <string name="str_hint_name_confirm_password">Nhập lại mật khẩu</string>
    <string name="str_name_mobile_number">Số điện thoại đăng nhập <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_name_mobile_number">Nhập số điện thoại</string>
    <string name="str_name_otp">OTP  <font fgcolor='#EA5151'>*</font></string>
    <string name="str_hint_name_otp">Nhập mã OTP</string>
    <string name="str_name_request_otp">Lấy OTP</string>
    <string name="str_rules">Bằng việc chọn “Tiếp tục” , bạn đã đồng ý với <font fgcolor='#007FFF'>Điều khoản và Điều kiện</font> của Paynet</string>
</resources>