<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/str_title_dialog_contact"
        android:textColor="@color/colorBlack3"
        android:textStyle="bold"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:text="@string/str_email_contact"
        android:textColor="#424143"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_phone_number_dialog_contact"
        android:drawablePadding="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:text="@string/str_phone_contact"
        android:textColor="#424143"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:text="@string/str_facebook_contact"
        android:textColor="#424143"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/str_done"
        android:textColor="#0080FF"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>