<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextTitleRegister"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="1. Thông tin tài khoản"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_name_merchant"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/bg_edt_forgot_password"
                android:hint="@string/str_hint_name_merchant"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/textSizeRegister" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_name_email"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/bg_edt_forgot_password"
                android:hint="@string/str_hint_name_email"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/textSizeRegister" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_name_password"
                android:textSize="@dimen/_11sdp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@drawable/bg_edt_forgot_password"
                    android:hint="@string/str_hint_name_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/textSizeRegister" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/button_password_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_hide_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_name_confirm_password"
                android:textSize="@dimen/_11sdp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/edt_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@drawable/bg_edt_forgot_password"
                    android:hint="@string/str_hint_name_confirm_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/textSizeRegister" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/button_confirm_password_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_hide_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_name_mobile_number"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/bg_edt_forgot_password"
                android:hint="@string/str_hint_name_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/textSizeRegister" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_name_otp"
                android:textSize="@dimen/_11sdp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/bg_edt_forgot_password">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_otp"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:hint="@string/str_hint_name_otp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/textSizeRegister"
                    app:layout_constraintEnd_toStartOf="@id/btn_otp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_otp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_name_request_otp"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSizeRegister"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_policy_terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_rules"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintStart_toEndOf="@id/checkbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>